feat(chat): release 1: release delete all sessions API 2: fix some req or resp content
