# nas-web/router/api/v1/chat.go
@@ -16,4 +16,5 @@ func RegisterChatRouter(party router.Party) {
 	party.Handle("POST", "/session", wrapper.Handler(controller.ChatController{}.CreateSession))
 	party.Handle("PUT", "/session", wrapper.Handler(controller.ChatController{}.UpdateSession))
 	party.Handle("DELETE", "/session_messages", wrapper.Handler(controller.ChatController{}.DeleteSessionMessages))
+	party.Handle("DELETE", "/all_sessions", wrapper.Handler(controller.ChatController{}.DeleteAllSessions))
 }
